--- a/templates/questions.html
+++ b/templates/questions.html
@@ -4,16 +4,42 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Questions</title>
+    <link rel="stylesheet" href="https://www.w3schools.com/w3css/4/w3.css">
+    <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Lato:400,700&display=swap">
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
+    <link rel="stylesheet" href="{{ url_for('static', filename='stylesheet.css') }}">
 </head>
-<body>
-    <h1>Welcome, {{ user.name }}</h1>
-    <p>{{ question }}</p>
-    <form action="" method="post">
-        <label for="answer">Your answer:</label>
-        <input type="text" id="answer" name="answer" required>
-        <button type="submit">Next</button>
-    </form>
+<body class="w3-light-grey">
 
-    <a href="{{ url_for('view_answers', user_id=user.id) }}">See your answers</a>
+<!-- Navbar -->
+<div class="w3-top">
+    <div class="w3-bar w3-black w3-card">
+        <a class="w3-bar-item w3-button w3-padding-large" href="{{ url_for('view_answers', user_id=user.id) }}">RESPONSES</a>
+        <a class="w3-bar-item w3-button w3-padding-large w3-right" href="/">LOGOUT</a>
+    </div>
+</div>
+
+<!-- Page content -->
+<div class="w3-content" style="max-width:1400px; margin-top:46px">
+
+    <!-- Header -->
+    <header class="w3-container w3-center w3-padding-32"> 
+        <h1>Welcome, {{ user.name }}</h1>
+    </header>
+
+    <!-- Question and Form -->
+    <div class="w3-card-4 w3-margin w3-white">
+        <div class="w3-container form-container">
+            <p>{{ question }}</p>
+            <form action="" method="post">
+                <label for="answer">Your answer:</label>
+                <input type="text" id="answer" name="answer" required class="w3-input w3-border">
+                <button type="submit" class="w3-button w3-black w3-margin-top">Next</button>
+            </form>
+        </div>
+    </div>
+
+</div>
+
 </body>
 </html>
