--- a/templates/view_answers.html
+++ b/templates/view_answers.html
@@ -15,7 +15,7 @@
 <div class="w3-top">
   <div class="w3-bar w3-black w3-card">
     <a class="w3-bar-item w3-button w3-padding-large" href="{{ url_for('questions', user_id=user.id) }}">NEXT QUESTION</a>
-    <a class="w3-bar-item w3-button w3-padding-large w3-right" href="/home">LOGOUT</a>
+    <a class="w3-bar-item w3-button w3-padding-large w3-right" href="/">LOGOUT</a>
   </div>
 </div>
 
