--- a/templates/questions.html
+++ b/templates/questions.html
@@ -14,8 +14,8 @@
 <!-- Navbar -->
 <div class="w3-top">
     <div class="w3-bar w3-black w3-card">
-        <a class="w3-bar-item w3-button w3-padding-large" href="{{ url_for('view_answers', user_id=user.id) }}">RESPONSES</a>
-        <a class="w3-bar-item w3-button w3-padding-large w3-right" href="/home">LOGOUT</a>
+        <a class="w3-bar-item w3-button w3-padding-large" href="{{ url_for('responses', user_id=user.id) }}">RESPONSES</a>
+        <a class="w3-bar-item w3-button w3-padding-large w3-right" href="/">LOGOUT</a>
     </div>
 </div>
 
