--- a/templates/responses.html
+++ b/templates/responses.html
@@ -34,7 +34,7 @@
                 <thead>
                     <tr>
                         <th>Question</th>
-                        <th>Your Answer</th>
+                        <th>Your Response</th>
                     </tr>
                 </thead>
                 <tbody>
