--- a/templates/thanks.html
+++ b/templates/thanks.html
@@ -14,7 +14,7 @@
 <!-- Navbar -->
 <div class="w3-top">
   <div class="w3-bar w3-black w3-card">
-    <a class="w3-bar-item w3-button w3-padding-large" href="{{ url_for('view_answers', user_id=user.id) }}">RESPONSES</a>
+    <a class="w3-bar-item w3-button w3-padding-large" href="{{ url_for('responses', user_id=user.id) }}">RESPONSES</a>
     <a class="w3-bar-item w3-button w3-padding-large w3-right" href="/">LOGOUT</a>
   </div>
 </div>
@@ -27,7 +27,7 @@
         <div class="w3-container form-container">
             <h1>Thank You!</h1>
             <p>You've completed all the questions. We appreciate your participation!</p>
-            <a href="{{ url_for('view_answers', user_id=user.id) }}" class="w3-button w3-black w3-margin-top">See Your Answers</a>
+            <a href="{{ url_for('responses', user_id=user.id) }}" class="w3-button w3-black w3-margin-top">See Your Answers</a>
         </div>
     </div>
 
